# codex-orchestra

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  README.txt  SCAFFOLDING-PLAN.md  SHA256SUMS.txt  codex-orchestra-r2-assessment-and-design.md  codex-orchestra-r2-example-workflow.yaml  codex-orchestra-r2-workflow.schema.json  pyproject.toml
codex-orchestra-framework/: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
codex-orchestra-framework/.agents/skills/architect-delivery/: SKILL.md
codex-orchestra-framework/.agents/skills/design-role/: SKILL.md
codex-orchestra-framework/.agents/skills/execute-assignment/: SKILL.md
codex-orchestra-framework/.agents/skills/ground-project/: SKILL.md
codex-orchestra-framework/.agents/skills/handle-drift/: SKILL.md
codex-orchestra-framework/.agents/skills/handoff-result/: SKILL.md
codex-orchestra-framework/.agents/skills/lead-workstream/: SKILL.md
codex-orchestra-framework/.agents/skills/manage-taskforce/: SKILL.md
codex-orchestra-framework/.agents/skills/orchestrate/: SKILL.md
codex-orchestra-framework/.agents/skills/package-context/: SKILL.md
codex-orchestra-framework/.agents/skills/reconcile-session/: SKILL.md
codex-orchestra-framework/.agents/skills/review-assignment/: SKILL.md
codex-orchestra-framework/.codex/: config.toml
codex-orchestra-framework/.codex/agents/: advisor_sol.toml  consultant.toml  context_engineer.toml  delivery_architect.toml  explorer_terra.toml  manager.toml  quality_governor.toml  reviewer_terra.toml  role_architect.toml  team_leader.toml  verifier_terra.toml  worker_luna.toml  worker_sol.toml  worker_terra.toml
codex-orchestra-framework/.orchestra/: README.md
codex-orchestra-framework/.orchestra/charter/: ASSURANCE.yaml  BRIEF.md  SCOPE.md
codex-orchestra-framework/.orchestra/decisions/: README.md
codex-orchestra-framework/.orchestra/plan/: MILESTONES.yaml  WORKSTREAMS.yaml
codex-orchestra-framework/.orchestra/policies/: assurance-policy.yaml  blocker-policy.yaml  collaboration-v2.yaml  concurrency.yaml  model-routing.yaml  retention.yaml
codex-orchestra-framework/.orchestra/roster/: README.md  ROLE_CATALOG.yaml
codex-orchestra-framework/.orchestra/schemas/: assurance-profile.schema.json  blocker.schema.json  branch-report.schema.json  collaboration-command.schema.json  context-capsule.schema.json  decision-request.schema.json  delegation-permit.schema.json  delivery-plan.schema.json  drift-alert.schema.json  gate-report.schema.json  grounding-result.schema.json  hire-request.schema.json  message-envelope.schema.json  portfolio-checkpoint.schema.json  result-envelope.schema.json  role-card.schema.json  staffing-decision.schema.json  tactical-plan.schema.json  task.schema.json  verification-result.schema.json
codex-orchestra-framework/.orchestra/templates/: BRANCH_REPORT.yaml  COLLABORATION_COMMAND.json  CONTEXT_CAPSULE.yaml  DECISION_RECORD.md  DELEGATION_PERMIT.yaml  GATE_REPORT.yaml  HANDOFF.yaml  HIRE_REQUEST.yaml  PORTFOLIO_CHECKPOINT.yaml  PORTFOLIO_SNAPSHOT.yaml  RESULT_ENVELOPE.json  ROLE_CARD.yaml  STAFFING_DECISION.yaml  TACTICAL_PLAN.yaml
codex-orchestra-framework/docs/: ASSURANCE.md  BOOTSTRAP.md  CODEX-CONFIGURATION.md  COMMUNICATION.md  EVALS.md  FIRST-REVISION.md  IMPLEMENTATION-NOTES.md  MODEL-ROUTING.md  OPERATING-MODEL.md  RESEARCH-SYNTHESIS.md  STATE-MACHINE.md  V2-COLLABORATION.md  VALIDATION.md  VIDEO-ANALYSIS.md  WORKED-EXAMPLE.md
codex-orchestra-framework/tests/: test_orchestra.py
codex-orchestra-framework/tools/: orchestra.py
crates/orchestra-core/: Cargo.toml
crates/orchestra-core/src/: automation.rs  automation_run.rs  compiler.rs  compiler_artifact.rs  context.rs  evaluator.rs  host.rs  inputs.rs  lib.rs  linear.rs  plan.rs  query.rs  runtime.rs  skills.rs  state.rs  validate.rs
crates/orchestra-core/tests/: evaluator_worker.rs
crates/orchestra-host-prototype/: Cargo.toml  README.md
crates/orchestra-host-prototype/src/: lib.rs  main.rs
crates/orchestra-lifecycle/: Cargo.toml
crates/orchestra-lifecycle/src/: lib.rs  main.rs
crates/orchestra-lifecycle/tests/: scaffold.rs
crates/orchestra-product/: Cargo.toml
crates/orchestra-product/src/: lib.rs  main.rs  release.rs
crates/orchestra-product/tests/: release_cli.rs
(+268 files in other folders)
