[workspace]
members = ["crates/orchestra-core", "crates/orchestra-lifecycle"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9.8"
