[workspace]
members = [
    "crates/orchestra-core",
    "crates/orchestra-lifecycle",
    "crates/orchestra-product",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_json_canonicalizer = "0.3.2"
serde_yaml_ng = "0.10.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
toml = "0.9.8"
minijinja = "2.21.0"
