[project]
name = "codex-orchestra-framework"
version = "0.2.0"
description = "Reference control-plane and repository contracts for governed Codex agent orchestration"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.22",
  "PyYAML>=6.0",
]
