[package]
name = "codex-orchestra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime-owned compiler and scheduler for Orchestra"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
minijinja.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
