[package]
name = "codex-orchestra-host-prototype"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Disposable issue #20 host protocol fixture"

[[bin]]
name = "orchestra-host-prototype"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

