[package]
name = "codex-orchestra-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Preview-first configuration lifecycle for Orchestra"

[[bin]]
name = "orchestra-lifecycle"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
