[package]
name = "codex-orchestra-product"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "orchestra-product"
path = "src/main.rs"
