[package]
name = "codex-orchestra-core"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = { workspace = true }

